[package]
name = "learn_graphics"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.12.0"
png = "0.16.8"
bmp = "0.5.0"
ordered-float = "2.0.1"
# faster = "0.5.1"